add WCAG color standard as reference for next update

--- a/app/globals.css
+++ b/app/globals.css
@@ -421,4 +421,13 @@ footer {
 icon color : #A12710
 background color : #fdc0cf
 darker background color : #ff799a
+
+WCAG color standard for 
+monochromatic palette
+bg-color, font-color 
+#ffcad6, #000000
+#ffb1c2, #000000
+#ff799a, #000000
+#e76386, #000000
+#cf4e72, #000000
 */
