--- a/app/globals.css
+++ b/app/globals.css
@@ -183,23 +183,24 @@ body {
 }
 
 .form-btn {
-  background-color: #ff799a;
-  border-color: #ff799a;
-  color: white;
+  background-color: #ffb1c2;
+  border-color: #ffb1c2;
+  color: #1a1a1a;
   margin-top: 2.5rem;
   font-weight: bold;
   --bs-btn-active-bg: #b02a37;
-  --bs-btn-active-color: #fff;
+  --bs-btn-active-color: #1a1a1a;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-color: #1a1a1a;
   --bs-btn-disabled-bg: #dc3545;
   --bs-btn-disabled-border-color: #dc3545;
 }
 
 .form-btn:hover {
-  background-color: #ff4b78;
-  border-color: #ff4b78;
+  background-color: #ff799a;
+  border-color: #ff799a;
   color: white;
+  font-stretch: extra-expanded;
 }
 
 .react-datepicker {
@@ -248,7 +249,7 @@ nav {
 }
 
 .login-header-btn a {
-  color: white;
+  color: black;
 }
 
 /* Home page */
@@ -294,14 +295,15 @@ nav {
 }
 
 .card-body .view-btn {
-  background-color: #ff799a;
-  color: white;
+  background-color: #ffb1c2 ;
+  color: black;
   text-decoration: none;
 }
 
 .card-body .view-btn:hover {
-  background-color: #ff4b78;
+  background-color: #ff799a;
   color: white;
+  font-weight: bold;
 }
 
 .card-img-top {
@@ -322,8 +324,8 @@ nav {
 /* Room Details Page */
 
 .booking-card .booking-btn:hover {
-  color: white;
-  background-color: #ff799a;
+  color: black;
+  background-color: #ffb1c2;
 }
 
 .price-per-night {
@@ -428,6 +430,4 @@ bg-color, font-color
 #ffcad6, #000000
 #ffb1c2, #000000
 #ff799a, #000000
-#e76386, #000000
-#cf4e72, #000000
 */
